--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConcreteServices\RoleService.cs" />
     <Compile Include="ConcreteServices\UserService.cs" />
     <Compile Include="Mappers\BLLEntityMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
