--- a/MvcPL/Web.config
+++ b/MvcPL/Web.config
@@ -20,6 +20,52 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <!--<authentication mode="Forms">
+      <forms loginUrl="~/Account/Login"/>
+    </authentication>-->
+    <!--<profile defaultProvider="CustomProfileProvider">
+      <providers>
+        <add name="CustomProfileProvider" type="CustomAuth.Providers.CustomProfileProvider, CustomAuth, Version=1.0.0.0, Culture=neutral" connectionStringName="DefaultConnection" applicationName="/"/>
+      </providers>
+      <properties>
+        <add name="FirstName" type="System.String"/>
+        <add name="LastName" type="System.String"/>
+        <add name="Age" type="System.Int32"/>
+      </properties>
+    </profile>-->
+    <membership defaultProvider="CustomMembershipProvider">
+      <providers>
+        <!--<add name="CustomMembershipProvider" 
+             type="CustomAuthProviders.Providers.CustomMembershipProvider, CustomAuthProviders" 
+             connectionStringName="DefaultConnection" 
+             enablePasswordRetrieval="false" 
+             enablePasswordReset="true" 
+             requiresQuestionAndAnswer="false" 
+             requiresUniqueEmail="false" 
+             maxInvalidPasswordAttempts="5" 
+             minRequiredPasswordLength="6" 
+             minRequiredNonalphanumericCharacters="0" 
+             passwordAttemptWindow="10" 
+             applicationName="/" />-->
+        <add name="CustomMembershipProvider" type="MvcPL.Providers.CustomMembershipProvider"/>
+      </providers>
+    </membership>
+    <roleManager enabled="true" defaultProvider="CustomRoleProvider">
+      <providers>
+        <add name="CustomRoleProvider" type="MvcPL.Providers.CustomRoleProvider, MvcPL, Version=1.0.0.0, Culture=neutral" connectionStringName="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\OnlineAuctionDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" applicationName="/"/>
+      </providers>
+    </roleManager>
+    <!--
+            If you are deploying to a cloud environment that has multiple web server instances,
+            you should change session state mode from "InProc" to "Custom". In addition,
+            change the connection string named "DefaultConnection" to connect to an instance
+            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
+      -->
+    <!--<sessionState mode="InProc" customProvider="DefaultSessionProvider">
+      <providers>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
+      </providers>
+    </sessionState>-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
