--- a/MvcPL/Web.config
+++ b/MvcPL/Web.config
@@ -20,9 +20,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <!--<authentication mode="Forms">
+    <authentication mode="Forms">
       <forms loginUrl="~/Account/Login"/>
-    </authentication>-->
+    </authentication>
     <!--<profile defaultProvider="CustomProfileProvider">
       <providers>
         <add name="CustomProfileProvider" type="CustomAuth.Providers.CustomProfileProvider, CustomAuth, Version=1.0.0.0, Culture=neutral" connectionStringName="DefaultConnection" applicationName="/"/>
@@ -53,6 +53,7 @@
     <roleManager enabled="true" defaultProvider="CustomRoleProvider">
       <providers>
         <add name="CustomRoleProvider" type="MvcPL.Providers.CustomRoleProvider, MvcPL, Version=1.0.0.0, Culture=neutral" connectionStringName="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\OnlineAuctionDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" applicationName="/"/>
+      <!--<add name="CustomRoleProvider" type="MvcPL.Providers.CustomRoleProvider, MvcPL, Version=1.0.0.0, Culture=neutral" connectionStringName="DefaultConnection" applicationName="/"/>-->
       </providers>
     </roleManager>
     <!--
