--- a/ORM/ORM.csproj
+++ b/ORM/ORM.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityModelContext.cs" />
+    <Compile Include="OnlineAuctionDBInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="User.cs" />
