--- a/BLL.Interface/BLL.Interface.csproj
+++ b/BLL.Interface/BLL.Interface.csproj
@@ -40,9 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\CategoryEntity.cs" />
     <Compile Include="Entities\RoleEntity.cs" />
+    <Compile Include="Entities\SectionEntity.cs" />
     <Compile Include="Entities\UserEntity.cs" />
+    <Compile Include="InterfaceServices\ICategoryService.cs" />
     <Compile Include="InterfaceServices\IRoleService.cs" />
+    <Compile Include="InterfaceServices\ISectionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InterfaceServices\IUserService.cs" />
   </ItemGroup>
