--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,10 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConcreteServices\CategoryService.cs" />
+    <Compile Include="ConcreteServices\RequestService.cs" />
     <Compile Include="ConcreteServices\RoleService.cs" />
     <Compile Include="ConcreteServices\SectionService.cs" />
     <Compile Include="ConcreteServices\UserService.cs" />
     <Compile Include="Mappers\BLLEntityMapper.cs" />
+    <Compile Include="Mappers\RequestMapper.cs" />
     <Compile Include="Mappers\SectionCategoryMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
