--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Concrete\CategoryRepository.cs" />
+    <Compile Include="Concrete\RequestRepository.cs" />
     <Compile Include="Concrete\RoleRepository.cs" />
     <Compile Include="Concrete\SectionRepository.cs" />
     <Compile Include="Concrete\UnitOfWork.cs" />
