--- a/DAL.Interface/DAL.Interface.csproj
+++ b/DAL.Interface/DAL.Interface.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\DalCategory.cs" />
+    <Compile Include="DTO\DalRequest.cs" />
     <Compile Include="DTO\DalRole.cs" />
     <Compile Include="DTO\DalSection.cs" />
     <Compile Include="DTO\DalUser.cs" />
@@ -48,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICategoryRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IRequestRepository.cs" />
     <Compile Include="Repositories\IRoleRepository.cs" />
     <Compile Include="Repositories\ISectionReposytory.cs" />
     <Compile Include="Repositories\IUnitOfWork.cs" />
