--- a/ORM/ORM.csproj
+++ b/ORM/ORM.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Bid.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="EntityModelContext.cs" />
+    <Compile Include="LotImage.cs" />
     <Compile Include="Lot.cs" />
     <Compile Include="LotRequest.cs" />
     <Compile Include="OnlineAuctionDBInitializer.cs" />
