--- a/MvcPL/Web.config
+++ b/MvcPL/Web.config
@@ -68,6 +68,14 @@
       </providers>
     </sessionState>-->
   </system.web>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
+      <remove statusCode="500"/>
+      <error statusCode="500" path="/Error/Default" responseMode="ExecuteURL"/>
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
