--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Concrete\BidRepository.cs" />
     <Compile Include="Concrete\CategoryRepository.cs" />
     <Compile Include="Concrete\LotRepository.cs" />
-    <Compile Include="Concrete\LotRequestRepository.cs" />
+    <Compile Include="Concrete\LotImageRepository.cs" />
     <Compile Include="Concrete\RequestRepository.cs" />
     <Compile Include="Concrete\RoleRepository.cs" />
     <Compile Include="Concrete\SectionRepository.cs" />
@@ -62,7 +62,7 @@
     <Compile Include="Mappers\BidDalDtoMapper.cs" />
     <Compile Include="Mappers\DalDTOMapper.cs" />
     <Compile Include="Mappers\LotDalDtoMapper.cs" />
-    <Compile Include="Mappers\LotRequestDalDtoMapper.cs" />
+    <Compile Include="Mappers\LotImageDalDtoMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
