--- a/MvcPL/packages.config
+++ b/MvcPL/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -19,6 +21,7 @@
   <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
+  <package id="Quartz" version="2.3.3" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
